--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,7 @@
 RewriteEngine On
-RewriteRule ^(.*)index\.html$ /$1 [R=301,L]
+RewriteBase /
+RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
+RewriteRule ^ %1 [NC,L,R=301]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^(.*)$ $1.html [NC,L]
